RESOLVED FIXED115127
Crash when trying to determine the length of an invalid message
https://bugs.webkit.org/show_bug.cgi?id=115127
Summary Crash when trying to determine the length of an invalid message
Anders Carlsson
Reported 2013-04-24 14:23:47 PDT
Crash when trying to determine the length of an invalid message
Attachments
Patch (1.82 KB, patch)
2013-04-24 14:25 PDT, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2013-04-24 14:25:58 PDT
Anders Carlsson
Comment 2 2013-04-24 14:32:44 PDT
Note You need to log in before you can comment on or make changes to this bug.