Crash when trying to determine the length of an invalid message https://bugs.webkit.org/show_bug.cgi?id=115127 <rdar://problem/13700736>

Reviewed by Beth Dakin.

Use message instead of incomingMessage since incomingMessage will always be null.

* Platform/CoreIPC/Connection.cpp:
(CoreIPC::Connection::processIncomingMessage):

Canonical link: https://commits.webkit.org/133563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149064 268f45cc-cd09-0410-ab3c-d52691b4dbfc